# prinvestgpt

./: .gitignore  .pre-commit-config.yaml  README.md  cli.py  main.py  new_cof.yaml  new_cof_sample.yaml  pyproject.toml  requirements.txt
knowledge_base/sources/baklib/: baklib_api.py
knowledge_base/test/: test.txt
prinvestGPT/: __init__.py  __version__.py  main.py
prinvestGPT/knowledge_base/sources/baklib/: baklib_api.py
prinvestgpt/: Dockerfile  __main__.py  settings.py
prinvestgpt/client/: corpus.py  plugin.py  server.py
prinvestgpt/knowledge_base/sources/baklib/: baklib_api.py
prinvestgpt/knowledge_base/test/: test.txt
prinvestgpt/web/api/agent/: views.py
scripts/meilisearch/: start_server.cmd  start_server.sh
