[tool.poetry]
name = "prinvestgpt"
version = "0.1.1"
description = "小原同学实验室"
authors = ["markqiu <qiucheng@jinniuai.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
gradio = { version = ">=3.42.0,<4.0.0", extras = ["oauth"] }
langchain = ">=0.0.283,<0.1.0"
PyPDF2 = ">=3.0.1,<4.0.0"
tiktoken = ">=0.4.0,<0.5.0"
meilisearch = ">=0.28.2,<1.0.0"
tqdm = ">=4.66.1,<5.0.0"
requests = "^2.31.0"
pydantic = "^2.3.0"
jionlp = ">=1.5.2,<2.0.0"
typer = "^0.9.0"
python-dotenv = "^1.0.0"
qianfan = "^0.2.1"
duckduckgo-search = "^3.9.9"
pydantic-settings = "^2.1.0"
gradio-user-history = {git = "https://github.com/markqiu/gradio-user-history.git", branch = "main"}


[tool.poetry.dev-dependencies]
pytest = "*"

[tool.poetry.scripts]
prin = {reference="prinvestgpt.__main__:app", type = "console" }


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
